2003-10-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_ltlibraries): Fix definition of $ldflags.
	* tests/stdlib2.test: Check AM_LDFLAGS alone.

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

	* automake.in (handle_ltlibraries): Also grep AM_LDFLAGS for `-module'.
	* tests/stdlib2.test: New file.
	* tests/Makefile.am (TESTS): Add stdlib2.test.
	Report from Kevin P. Fleming.

2003-10-03  Richard Dawe  <rich@phekda.freeserve.co.uk>  (tiny change)

	* tests/defs.in: For required=runtest, check that we are using
	a DejaGnu that supports specifying the program on the command-line.

2003-10-03  Alexandre Duret-Lutz  <adl@gnu.org>

	For Debian Bug #213524:
	* lib/am/texinfos.am (install-info-am, uninstall-info-am): Merge
	stderr and stdout, and grep only the first line while testing
	install-info --version's output.  This revert part of the change
	from 2001-05-18.

2003-09-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (file_contents_internal): Do not add newlines before
	empty actions.
	Report from Bruno Haible.

2003-09-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in: Bump version to 1.7.7a.

	* configure.in, NEWS: Bump version to 1.7.7.

2003-09-05  Paul Eggert  <eggert@twinsun.com>

	* NEWS, aclocal.in, automake.in, automake.texi,
	lib/Automake/Channels.pm, lib/am/dejagnu.am, lib/am/depend.am,
	lib/am/lisp.am, lib/am/remake-hdr.am, lib/am/texi-vers.am,
	lib/ansi2knr.c, lib/depcomp, lib/missing, lib/py-compile,
	m4/obsolete.m4, m4/python.m4, tests/backsl4.test,
	tests/cond12.test, tests/defs.in, tests/dejagnu7.test,
	tests/depacl2.test, tests/dirlist.test, tests/error.test,
	tests/getopt.test, tests/gnuwarn.test, tests/include2.test,
	tests/libobj10.test, tests/libtool5.test, tests/libtool6.test,
	tests/lisp3.test, tests/phony.test, tests/pr220.test,
	tests/subcond2.test, tests/subcond3.test, tests/vtexi.test:
	Spelling and minor grammar fixes.

2003-09-02  Alexandre Duret-Lutz  <adl@gnu.org>
