@@ -1,4 +1,4 @@
 @set UPDATED 7 September 2003
 @set UPDATED-MONTH September 2003
-@set EDITION 1.7.7a
-@set VERSION 1.7.7a
+@set EDITION 1.7.8
+@set VERSION 1.7.8
