@@ -1,3 +1,10 @@
+Bugs fixed in 1.7.8:
+* Remove spurious blank lines in cleaning rules introduced in 1.7.7.
+* Fix detection of Debian's install-info, broken since version 1.5.
+  (Debian bug #213524).
+* Honor -module if it appears in AM_LDFLAGS (i.e., relax name checking)
+  This was only done for libfoo_LDFLAGS and LDFLAGS in previous versions.
+
 Bugs fixed in 1.7.7:
 * The implementation of automake's --no-force option is unreliable,
   so this option is ignored in this version.  A real fix will appear in
