@@ -1,5 +1,9 @@
 2003-10-07  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.in, NEWS: Bump version to 1.7.8.
+
+2003-10-06  Alexandre Duret-Lutz  <adl@gnu.org>
+
 	* automake.in (handle_ltlibraries): Fix definition of $ldflags.
 	* tests/stdlib2.test: Check AM_LDFLAGS alone.
 
